# moneycontrol-mcp

./: README.md  pyproject.toml
.github/workflows/: ci.yml
moneycontrol_mcp/: __init__.py  client.py  server.py
scripts/: smoke_test.py
