[project]
name = "moneycontrol-mcp"
version = "0.1.0"
description = "MCP server exposing Moneycontrol market data (quotes, indices, FII/DII, fundamentals, news) as tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
moneycontrol-mcp = "moneycontrol_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["moneycontrol_mcp"]
